[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/WallResetter.gd" type="Script" id=1]
[ext_resource path="res://scenes/Fish.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://open-sans.bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/UI.gd" type="Script" id=6]
[ext_resource path="res://art/white.png" type="Texture" id=7]
[ext_resource path="res://game_over.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 257.75 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Fish" parent="." instance=ExtResource( 2 )]
position = Vector2( 225, 326 )

[node name="Wall" parent="." instance=ExtResource( 3 )]
position = Vector2( 1100, 100 )

[node name="Wall2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1275, 100 )

[node name="Wall3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1450, 100 )

[node name="Wall4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1625, 100 )

[node name="Wall5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1800, 100 )

[node name="WallResetter" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallResetter"]
position = Vector2( -82, 317 )
shape = SubResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 114.0
margin_top = 108.0
margin_right = 1138.0
margin_bottom = 708.0
rect_scale = Vector2( 0.7, 0.7 )
script = ExtResource( 6 )

[node name="Score" type="Label" parent="UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 14.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="GameOver" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="UI/GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.5
margin_top = 110.0
margin_right = 92.5
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "Game Over"
align = 1
uppercase = true

[node name="ScoreContainer" type="VBoxContainer" parent="UI/GameOver"]
margin_left = 443.5
margin_top = 264.0
margin_right = 580.5
margin_bottom = 336.0

[node name="Score" type="HBoxContainer" parent="UI/GameOver/ScoreContainer"]
margin_right = 137.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="UI/GameOver/ScoreContainer/Score"]
margin_right = 65.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "Score"

[node name="Value" type="Label" parent="UI/GameOver/ScoreContainer/Score"]
margin_left = 69.0
margin_right = 83.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="HighScore" type="HBoxContainer" parent="UI/GameOver/ScoreContainer"]
margin_top = 38.0
margin_right = 137.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="UI/GameOver/ScoreContainer/HighScore"]
margin_right = 119.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "Highscore"

[node name="Value" type="Label" parent="UI/GameOver/ScoreContainer/HighScore"]
margin_left = 123.0
margin_right = 137.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="Button" type="Button" parent="UI/GameOver"]
modulate = Color( 0.196078, 0.886275, 0.0352941, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 70.0
margin_right = 50.0
margin_bottom = 100.0
text = "New Game"
flat = true

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.137255, 0.141176, 0.196078, 1 )
position = Vector2( 455, 327 )
scale = Vector2( 16.8698, 8.67502 )
z_index = -10
texture = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 470, 318 )
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="DeathBox" type="Node2D" parent="."]

[connection signal="dead" from="Fish" to="." method="_on_Fish_dead"]
[connection signal="area_entered" from="WallResetter" to="WallResetter" method="_on_WallResetter_area_entered"]
[connection signal="button_up" from="UI/GameOver/Button" to="." method="new_game"]
